minor issues fixed on logic

--- a/admin/slot-management.html
+++ b/admin/slot-management.html
@@ -448,7 +448,7 @@
                   Initial Status <span class="required">*</span>
                 </label>
                 <select class="filter-select" id="configSlotStatus" required>
-                  <option value="Fgoree">Available</option>
+                  <option value="Available">Available</option>
                   <option value="Booked">Occupied</option>
                   <option value="Reserved">Reserved</option>
                   <option value="Unbooked">Unbooked</option>
