fixed some issues

--- a/admin/slot-management.html
+++ b/admin/slot-management.html
@@ -160,7 +160,7 @@
               View EV Slots
             </button>
             <button class="btn btn-secondary" id="btn-handicapped">
-              View Handicapped Slots
+              View Special Slots
             </button>
             <button class="btn btn-secondary" id="clear-filters">
               Clear Filters
@@ -179,7 +179,7 @@
                   <i class="fas fa-map-marker-alt"></i> building1
                 </option>
                 <option value="building2">
-                  <i class="fas fa-map-marker-alt"></i> buildin2
+                  <i class="fas fa-map-marker-alt"></i> building2
                 </option>
                 <option value="building3">
                   <i class="fas fa-map-marker-alt"></i> building3
@@ -324,7 +324,7 @@
                   Initial Status <span class="required">*</span>
                 </label>
                 <select class="filter-select" id="slotInitialStatus" required>
-                  <option value="Available">Available</option>
+                  <option value="Free">Available</option>
                   <option value="Occupied">Occupied</option>
                   <option value="Reserved">Reserved</option>
                   <option value="Unauthorized">Unbooked</option>
@@ -448,7 +448,7 @@
                   Initial Status <span class="required">*</span>
                 </label>
                 <select class="filter-select" id="configSlotStatus" required>
-                  <option value="Available">Available</option>
+                  <option value="Free">Available</option>
                   <option value="Booked">Occupied</option>
                   <option value="Reserved">Reserved</option>
                   <option value="Unbooked">Unbooked</option>
